# web_server1

./: .env_sample  bot.py  catalog.html  category1.html  contacts.html  main.html  main.py  pyproject.toml  readme.md
handlers/: start.py
keyboards/: all_kb.py
